--- a/htmls/Home.html
+++ b/htmls/Home.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class = "container">
+        <a class = "home">Home</a>
+        <a class = "random">Random</a>
+        <div class = "browsewords"><a>Browse words</a></div>
+        <div class = "practice"><a>Practice</a></div>
+        <div class = "myprofile"><a>Profile</a></div>
+
+        <div class="lefcolumn">
+            <div class="wordoftheday">
+                <h2>Word of the day</h2>
+                <a><h3>Word</h3></a>
+            </div>
+            <div class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus pretium mattis. 
+                Curabitur ut diam eros. Nullam tincidunt sollicitudin nunc non pellentesque. 
+                Proin id elit vitae turpis suscipit scelerisque ut sit amet lorem. 
+                Ut rutrum velit vel quam venenatis, et laoreet ipsum posuere. 
+                Integer porta eleifend congue. Maecenas non ligula a felis 
+                finibus ultricies at eget orci. Quisque imperdiet semper mi ac congue. 
+                Quisque rutrum consectetur molestie. Fusce at tortor blandit, finibus
+                risus vitae, malesuada metus. Mauris finibus mattis sem, sit amet pulvinar tellus.
+
+                In vitae placerat ex, eget convallis risus. Maecenas sollicitudin ornare 
+                tincidunt. Sed fermentum volutpat ante non gravida. Etiam sit amet felis 
+                et lorem facilisis malesuada. Nam suscipit orci in enim rhoncus fermentum 
+                sed eget ligula. Nullam aliquet, nibh nec aliquet venenatis, velit dolor
+                finibus ipsum, et placerat magna ligula sit amet metus.
+            </div>
+        </div>
+        <form class="rightcolumn">
+            <input type="text"/>
+            <input type="submit" value="Process text">                
+        </form>
+        <form class="search"><label grid-area="slabel">Search:</label><input grid-area="sinput" type="text"/><input grid-area="ssubmit" type="submit"/></form>
+    </div>
 </body>
 </html>
