--- a/htmls/Login.html
+++ b/htmls/Login.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form class="middle">
+        <label for="email">E-mail</label>
+        <input id="email" type="email"/>
+        <label for="password">Password</label>
+        <input id="password" type="password"/>
+        <input type="submit" value="Login">
+        <input type="reset" value="Clear">
+    </form>
 </body>
 </html>
